# Agentic_HR

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
agents/: base_agent.py  employee_data_agent.py  grievance_agent.py  orchestrator.py  policy_agent.py  recruitment_agent.py
config/: settings.py
data/: employees.json  grievances.json  open_positions.json  policies.json
memory/sessions/: 5f9954f282cd.json  6ed8098535b6.json  a0a1378fa24c.json  fb551f9119ec.json
prompts/: employee_data_agent.txt  grievance_agent.txt  orchestrator.txt  policy_agent.txt  recruitment_agent.txt
static/: index.html
tools/: employee_tools.py  grievance_tools.py  llm_client.py  logger.py  memory_tools.py  policy_tools.py  recruitment_tools.py  session_tools.py
